# refinery

./: .gitignore  README.md  docker-compose.yml  dockerfile.pendulum
PrimalityTheory/: MillerRabin.cpp  PrimalityTheory.vcxproj  PrimalityTheory.vcxproj.filters  SolovayStrassen.cpp  main.cpp
PrimalityTheory/include/: MillerRabin.h  PrimalityTest.h  SolovayStrassen.h
PrimalityTheory/source/: Fermat.cpp  Lucas.cpp  MillerRabin.cpp  PrimalityTest.cpp  SolovayStrassen.cpp  main.cpp
SieveTheory/include/: PritchardSieve.h
SieveTheory/source/: EulerSieve.cpp  SundaramSieve.cpp
archive/curve-regressor/: .gitmodules
archive/curve-regressor/include/: wrapper_regressor.h
archive/curve-regressor/service-civetweb/: script.js
archive/curve-regressor/source/: abstract_iterative.cpp
archive/image-compressor/: ImageCompressor.sln
archive/pendulum-orchestrator/: .gitignore  dockerfile.control  run.sh
archive/pendulum-orchestrator/control/: simple.py
archive/pendulum-orchestrator/pendulum/: abstract.h  main.h
archive/pendulum-orchestrator/script/: setup-control.sh
archive/signature-generator/curve-regressor/: CMakeLists.txt
archive/signature-generator/curve-regressor/include/: abstract_linear.h  predefined.h  sensor_simulator.h  server_api.h
archive/signature-generator/curve-regressor/service-sqlite/: schema.sql
archive/signature-generator/curve-regressor/source/: server_api.c
archive/signature-generator/error-inspector/: ErrorInspector.sln
archive/signature-generator/image-compressor/: README.md
archive/spectrum-comparator/include/: wrapper_spdlog.h
archive/spectrum-comparator/module/: main_import.c
archive/stream-generator/: .gitignore  setup-module.sh
archive/stream-generator/include/: audio_queue.h  (+5 more)
control/: simple.py
control/proto/: pendulum.proto
curve-regressor/: .gitignore
curve-regressor/module/: main_start.c
curve-regressor/source/: abstract_linear.cpp  server_database.c
error-inspector/: README.md
image-compressor/ReversibleCompression/: ReversibleCompression.vcxproj  ReversibleCompression.vcxproj.filters
message-generator/: MessageGenerator.sln
message-generator/SerialCommunication/: SerialCommunication.vcxproj
metroarchive/message-generator/: README.md
metroarchive/pendulum-orchestrator/: dockerfile.orch
metroarchive/stream-generator/: .clang-format
orch/: simple.py
pendulum/: main.cpp  meson.build
pendulum-orchestrator/grafana/: grafana.ini
pendulum-orchestrator/prometheus/: prometheus.yml
script/: setup-control.sh  setup-orch.sh  setup-pendulum.sh
signature-generator/message-generator/: .gitignore
signature-generator/spectrum-comparator/: .gitignore  makefile
signature-generator/stream-generator/: setup-manager.sh
signature-generator/wave-generator/: README.md
spectrum-comparator/service-nginx/: setup-nginx.sh
stream-generator/include/: format_wav.h
stream-generator/module/: main_janus.c
(+213 files in other folders)
